improve: do not load UsernameCache on dedicated server